[package]
name = "lyche"
version = "0.4.0"
authors = ["segfault <segfault#1337>"]
edition = "2021"
resolver = "2"

# to future me: When features are stable, Clean Up This File Please............

[dependencies]

# memflow stuff
memflow = "0.2.0-beta10"
memflow-win32 = "0.2.0-beta10"
memflow-pcileech = { git = "https://github.com/memflow/memflow-pcileech", branch = "main" }


# for pattern scanning
regex = "^1.5"

# util macros and such
lazy_static = "^1.4"
clearscreen = "^1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "^3.0.5", features = ["cargo"]}
clap-num = "1.0"
simplelog = "^0.12"
futures = {version = "0.3", features = ["executor"]}
anyhow = "1.0"
failure = "0.1.6"


# arduino com
serialport = "^4.2"
format-bytes = "0.3"

# config save / load
config = { version = "^0.13", features = ["toml"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.5.6"
chrono = { version = "0.4", features = ["serde"] }
nom = "4.2.3"
notify = "5.0"

# read valve vdf key value format for map info
keyvalues-parser = "0.1.0"

# rendering
winit = "0.27"
#crow = "0.7"
wgpu = "0.14"
wgpu_glyph = "0.18"
image = "0.24"
cgmath = "0.18"

#vischeck
vbsp = {version="*", path="../vbsp"}

# uncomment if you wanna run performance traces on the code
# [profile.release]
# debug = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[features]
bhop_sus = []
aimbot = []
esp = []
bones = []